# black-hat

./: CMakeLists.txt  README.md
black_bash/: CMakeLists.txt
black_bash/src/: main.cpp
client/: CMakeLists.txt
client/src/: black_hat.cpp  main.cpp  program.cpp  terminal.cpp
include/: bh_inst.h  black_hat.h  program.h  terminal.h
libBlackHat/: CMakeLists.txt
libBlackHat/include/: blackhat.h
libBlackHat/src/: main.cpp
resources/lua/: bash.lua
src/: bh_inst.cpp  black_hat.cpp  main.cpp  program.cpp  terminal.cpp
